# wreq-php

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  PUBLISHING.md  README.md  THIRD_PARTY_LICENSES.md  build.rs  composer.json  phpunit.xml
.cargo/: config.toml
.github/workflows/: autorelease.yml  ci.yml  docker.yml  release.yml
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.debian  Dockerfile.runtime
examples/: basic.php
scripts/ci/: musl-build.sh
src/: client.rs  convert.rs  emulation.rs  error.rs  lib.rs  response.rs  runtime.rs
src-php/: Client.php  Emulation.php  Installer.php  PendingRequest.php  Response.php  Wreq.stubs.php
src-php/Exceptions/: ExtensionMissingException.php  RequestException.php  VersionMismatchException.php
src-php/Support/: Extension.php
stubs/: wreq_php.stub.php
tests/: FakeExtClient.php  FakeRawResponse.php  IntegrationTest.php  PendingRequestTest.php  ResponseTest.php
tests/fixtures/: keepalive_server.php
