[package]
name = "wreq_php"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "PHP HTTP client with deterministic connection pooling and browser TLS/HTTP2 fingerprinting, built on wreq"
# LGPL-3.0 because the linked `wreq-util` crate is LGPL-3.0; see LICENSE and
# THIRD_PARTY_LICENSES.md.
license = "LGPL-3.0-or-later"

[lib]
name = "wreq_php"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ext-php-rs = { version = "0.15", features = ["anyhow"] }
wreq = { version = "6.0.0-rc.28", features = [
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "charset",
    "json",
    "form",
    "query",
    "multipart",
    "hickory-dns",
] }
wreq-util = { version = "3.0.0-rc.11", features = [
    "emulation-serde",
    "emulation-rand",
] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
thiserror = "2"
strum = { version = "0.27.2", default-features = false }

[build-dependencies]
ext-php-rs = { version = "0.15", features = ["anyhow"] }

# ext-php-rs's bindgen fork (`ext-php-rs-bindgen`) depends on a forked
# `ext-php-rs-clang-sys` whose `links = "clang"` collides with the regular
# `clang-sys` reached through wreq's boring-sys2 — so ext-php-rs 0.15.13 cannot
# otherwise coexist with wreq. The vendored copy re-points that dependency at
# the regular `clang-sys` (the fork only uses standard APIs; PreserveNone is
# handled numerically), leaving a single `links = "clang"` in the graph.
[patch.crates-io]
ext-php-rs-bindgen = { path = "third_party/ext-php-rs-bindgen" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
